minitrace-macro/tests/ui/err/properties-partial-escape.rs
use minitrace::trace;

#[trace(properties = { "a": "{{b}" })]
fn f(b: u8) {}

fn main() {}
